<resources>
    <string name="layers_drawer_open">Open layers list</string>
    <string name="layers_drawer_close">Close layers list</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="osm">OpenStreetMap Standard aka Mapnik</string>
    <string name="layer_name">Layer name</string>
    <string name="layer_url">Layer URL</string>
    <string name="layer_url_hint">For example: http://{a,b,c}.tile.openstreetmap.org/{z}/{x}/{y}.png</string>
    <string name="layer_type">TMS type</string>
    <string name="create_layer">Create layer</string>
    <string name="create_tms_layer">Create TMS layer</string>
    <string name="create_qms_layer">Add geoservice</string>
    <string name="tmstype_osm">XYZ (OSM)</string>
    <string name="tmstype_normal">TMS (OSGeo spec.)</string>
    <string name="error_invalid_url">URL is invalid</string>
    <string name="qms_unavailable">Geoservice server is unavailable</string>
    <string name="nextgis_web">NextGIS</string>
    <string name="ngw_url">NextGIS Web URL</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="user_name">Login</string>
    <string name="user_name_ngw">Web GIS login</string>
    <string name="user_name_ngid">E-mail</string>
    <string name="canceled">Canceled</string>
    <string name="error_login">Username or password are incorrect</string>
    <string name="error_webgis_not_found">Web GIS not found</string>
    <string name="ngw_layer_add">Add from Web GIS</string>
    <string name="data_proposal_menu">Need data?</string>
    <string name="data_proposal">Order data</string>
    <string name="data_title">Need data for your area?</string>
    <string name="data_text">With our <a href="https://data.nextgis.com/">data.nextgis.com</a> service, you can order and obtain spatial data for any area. You can get basemap data, elevation data, landscapes, roads, buildings, and much more.\nThe data is provided in formats suitable for use in NextGIS Mobile.</string>
    <string name="ngw_account_already_exists">Account already exist</string>
    <string name="ngw_accounts">Web GIS</string>
    <string name="ngw_account_add_item">Add Web GIS</string>
    <string name="ngw_account_add">Sign in</string>
    <string name="ngw_account_delete">Delete account</string>
    <string name="ngw_account_delete_summary">Delete account. All layers connected with this account will be deleted too. Active synchronization will be stopped.</string>
    <string name="ngw_account_delete_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
    <string name="waiting">Please wait</string>
    <string name="wait_sync_stopping">Waiting of synchronization stopping</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="choose_layers">Select layers</string>
    <string name="loading_summary">Wait a little. The data is loading</string>
    <string name="up_dots">..</string>
    <string name="up">Up</string>
    <string name="resource_group">Resource group</string>
    <string name="ngw_account">Account - %1$s</string>
    <string name="raster">Raster</string>
    <string name="vector">Vector</string>
    <string name="raster_layer">Raster layer</string>
    <string name="vector_layer">Vector layer</string>
    <string name="pg_layer">PostGIS layer</string>
    <string name="credentials_opt">Credentials (optional)</string>
    <string name="layer_type_optional">Tile layer type (optional)</string>
    <string name="sync">Synchronization</string>
    <string name="sync_enable">Enable sync</string>
    <string name="sync_enabled">Sync enabled</string>
    <string name="sync_enable_error">Error enabling sync</string>
    <string name="sync_disable">Disable sync</string>
    <string name="sync_disabled">Sync disabled</string>
    <string name="auto_sync">Automatic synchronization</string>
    <string name="auto_sync_summary">Synchronization at regular intervals</string>
    <string name="sync_dialog_title">Sync with NextGIS Web?</string>
    <string name="sync_dialog_message">Which option do you want to use for this layer? You can change it later in layer settings or Web GIS.</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="skip">Skip</string>
    <string name="sync_interval">Synchronization interval</string>
    <string name="actions">Actions</string>
    <string name="customize_ngw_map_layers">Set layers</string>
    <string name="sync_layers_summary">Synchronized layers:</string>
    <string name="layer_group">Group</string>
    <string name="layer_ngw_raster">NGW Raster</string>
    <string name="layer_ngw_vector">NGW Layer</string>
    <string name="layer_tms">Tile Raster</string>
    <string name="layer_na">Not available</string>
    <string name="latitude_caption">Latitude</string>
    <string name="longitude_caption">Longitude</string>
    <string name="altitude_caption">Altitude</string>
    <string name="accuracy_caption">Accuracy</string>
    <string name="set_attributes">Set attributes</string>
    <string name="latitude_caption_short">Lat</string>
    <string name="longitude_caption_short">Long</string>
    <string name="altitude_caption_short">Alt</string>
    <string name="accuracy_caption_short">Acc</string>
    <string name="accurate_location">Accurate location</string>
    <string name="accurate_taking">Accumulating and averaging location…</string>
    <string name="accurate_finish_sound">Beep at finish</string>
    <string name="action_settings">Settings</string>
    <string name="do_not_ask_again">Do not ask again</string>
    <string name="apply">Apply</string>
    <string name="error_db_insert">Insert feature failed</string>
    <string name="error_db_update">Update feature failed</string>
    <string name="error_db_query">Query feature failed</string>
    <string name="error_db_delete">Delete feature failed</string>
    <string name="create_vector_layer">Create vector layer</string>
    <string name="new_layer">New layer</string>
    <string name="message_layer_created">Layer created</string>
    <string name="message_group_created">Group created</string>
    <string name="feature_n">Feature #%1$d</string>
    <string name="new_feature">New feature</string>
    <string name="new_group">Create new group</string>
    <string name="new_group_name">Group name:</string>
    <string name="error_form_create">Form create failed</string>
    <string name="system_default">System default</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="one_day">1 day</string>
    <string name="sync_set_interval">Set synchronization interval</string>
    <string name="last_sync_time">Synced %1$s at %2$s</string>
    <string name="ngw_different_credentials">Existing account differs the one from form. The existing account will be used.</string>
    <string name="error_no_location">No location</string>
    <string name="error_layer_not_inited">Layer is not initialized. Abort</string>
    <string name="n_a">n/a</string>
    <string name="layer_vector">Vector layer</string>
    <string name="layer_permanent">It\'s permanent layer</string>
    <string name="empty_tracks">There are no recorded tracks yet.</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_share">Share</string>
    <string name="menu_visibility_on">Show</string>
    <string name="menu_visibility_off">Hide</string>
    <string name="nothing_selected">Nothing is selected</string>
    <string name="unclosed_track_deleted">Current track is deleted too</string>
    <string name="preparing">Preparing…</string>
    <string name="import_">Import</string>
    <string name="export">Export</string>
    <string name="folder">Folder</string>
    <string name="zip">ZIP file</string>
    <string name="formbuilder">FormBuilder file</string>
    <string name="geojson">GeoJSON file</string>
    <string name="unknown_file">Unknown file</string>
    <string name="add_point">Add point</string>
    <string name="edit_attributes">Edit attributes</string>
    <string name="move_point_to_current_location">Point to current location</string>
    <string name="delete_point">Delete point</string>
    <string name="add_multipoint">Add multipoint</string>
    <string name="delete_multipoint">Delete multipoint</string>
    <string name="delete_item_done">Item deleted</string>
    <string name="delete_layer_done">Layer deleted</string>
    <string name="add_line">Add line</string>
    <string name="delete_line">Delete line</string>
    <string name="edit_by_walk">Append geometry by walk</string>
    <string name="edit_by_touch">Append geometry by touch</string>
    <string name="add_multilinestring">Add multilinestring</string>
    <string name="delete_multilinestring">Delete multilinestring</string>
    <string name="add_polygon">Add polygon</string>
    <string name="add_hole">Add hole</string>
    <string name="delete_polygon">Delete polygon</string>
    <string name="delete_hole">Delete hole</string>
    <string name="add_multipolygon">Add multipolygon</string>
    <string name="delete_multipolygon">Delete multipolygon</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="retry">Retry</string>
    <string name="error_create_feature">Create feature failed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="has_edits">There are unsaved edits. Do you want to save them?</string>
    <string name="attributes_next">Next</string>
    <string name="attributes_prev">Previous</string>
    <string name="not_enough_points">Not enough points</string>
    <string name="error_change_feature">Change feature failed</string>
    <string name="move_point_to_center">Point to display center</string>
    <string name="mainSettings">Main settings</string>
    <string name="displaySettings">Display settings</string>
    <string name="fill_color">Fill color</string>
    <string name="stroke_color">Stroke color</string>
    <string name="width">Width</string>
    <string name="size">Size</string>
    <string name="fill">Filled</string>
    <string name="type">Type</string>
    <string name="type_solid">Solid</string>
    <string name="type_dash">Dash</string>
    <string name="select_color">Select color</string>
    <string name="tms_layer_cache_size">TMS in-memory cache size</string>
    <string name="make_grayscale">Make grayscale</string>
    <string name="contrast">Contrast: %1$.1f</string>
    <string name="brightness">Brightness</string>
    <string name="menu_zoom_extent">Zoom to extent</string>
    <string name="menu_download_tiles">Download tiles</string>
    <string name="action_edit">Edit</string>
    <string name="menu_send_to_ngw">Send to WEB GIS</string>
    <string name="ngid_username">Username</string>
    <string name="ngid_email">E-mail</string>
    <string name="ngid_first_name">First name</string>
    <string name="ngid_last_name">Last name</string>
    <string name="sign_out">Sign out</string>
    <string name="help_custom_auth_server"><a href="https://docs.nextgis.com/docs_ngmobile/source/auth.html#via-on-premise-ngidop">Help</a></string>
    <string name="ng_server">NextGIS Cloud</string>
    <string name="custom_server">NextGIS ID from custom server</string>
</resources>