<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_zoom_extent"
        android:orderInCategory="1"
        android:title="@string/menu_zoom_extent"
        android:visible="false"/>

    <item
        android:id="@+id/menu_download_tiles"
        android:orderInCategory="10"
        android:title="@string/menu_download_tiles"
        android:visible="false"/>

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="15"
        android:title="@string/menu_share"
        android:visible="false"/>

    <item
        android:id="@+id/menu_send_to_ngw"
        android:orderInCategory="20"
        android:title="@string/menu_send_to_ngw"
        android:visible="false"/>

    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="30"
        android:title="@string/action_edit"
        android:visible="false"/>

    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="40"
        android:title="@string/menu_delete"/>

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"/>

</menu>