<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2017 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="username"
        android:title="@string/ngid_username"/>
    <Preference
        android:key="email"
        android:title="@string/ngid_email"/>
    <Preference
        android:key="first_name"
        android:title="@string/ngid_first_name"/>
    <Preference
        android:key="last_name"
        android:title="@string/ngid_last_name"/>
    <Preference
        android:key="sign_out"
        android:persistent="false"
        android:title="@string/sign_out"/>
</PreferenceScreen>