<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_color"
        android:icon="@drawable/ic_color_lens_dark"
        android:title="@string/select_color"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_social_share_dark"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_visibility_on"
        android:icon="@drawable/ic_action_visibility_on_dark"
        android:title="@string/menu_visibility_on"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_visibility_off"
        android:icon="@drawable/ic_action_visibility_off_dark"
        android:title="@string/menu_visibility_off"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_delete_dark"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_action_content_select_all_dark"
        android:title="@string/menu_select_all"
        app:showAsAction="ifRoom"/>

</menu>