<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layer_name"
            android:hint="@string/layer_name"
            android:singleLine="true"
            android:inputType="text"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layer_url"
            android:hint="@string/layer_url"
            android:singleLine="false"
            android:elegantTextHeight="false"
            android:inputType="textUri"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/layer_url_hint"
            android:id="@+id/layer_url_hint"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/layer_type_optional"
            android:id="@+id/layer_type_summary"
            android:background="?attr/colorPrimary"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_margin="5dp"
            android:padding="2dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layer_type"
            android:prompt="@string/layer_type"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/credentials_opt"
            android:id="@+id/auth_summary"
            android:background="?attr/colorPrimary"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_margin="5dp"
            android:padding="2dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/password"
            />
    </LinearLayout>

</ScrollView>