<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <include
        layout="@layout/actionbar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainSettings"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_margin="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/layer_name"
        android:id="@+id/layer_name_label"
        android:layout_margin="5dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layer_name"
        android:layout_margin="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tms_layer_cache_size"
        android:id="@+id/tms_layer_cache_size_label"
        android:layout_margin="5dp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/tms_tile_cache_size"
        android:entryValues="@array/tms_tile_cache_size_val"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/displaySettings"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_margin="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contrast"
        android:id="@+id/contrast_seek"
        android:layout_margin="5dp"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contrastSeekBar"
        android:max="100"
        android:layout_margin="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/brightness"
        android:id="@+id/brightness_seek"
        android:layout_margin="5dp"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/brightnessSeekBar"
        android:max="510"
        android:layout_margin="5dp"
        />

    <android.support.v7.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_grayscale"
        android:id="@+id/make_grayscale"
        android:layout_margin="5dp"
        />


</LinearLayout>