<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit_add_new_point"
        android:icon="@drawable/ic_action_add_point"
        android:title="@string/add_point"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_edit_delete_point"
        android:icon="@drawable/ic_action_delete_point"
        android:title="@string/delete_point"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_edit_move_point_to_center"
        android:icon="@drawable/ic_action_move_point_to_center"
        android:title="@string/move_point_to_center"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_edit_move_point_to_current_location"
        android:icon="@drawable/ic_action_move_point_to_location"
        android:title="@string/move_point_to_current_location"
        app:showAsAction="ifRoom"/>
</menu>