<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_visibility_on"
        android:title="@string/menu_visibility_on"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_visibility_white_24dp"
        />

    <item
        android:id="@+id/menu_visibility_off"
        android:title="@string/menu_visibility_off"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_visibility_off_white_24dp"
        />

    <!--<item--><!--android:id="@+id/menu_share"--><!--android:title="@string/menu_share"--><!--app:showAsAction="always"--><!--android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"/>-->

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_delete_light"
        />

    <item
        android:id="@+id/menu_select_all"
        android:title="@string/menu_select_all"
        app:showAsAction="ifRoom"
        android:icon="@drawable/abc_ic_menu_selectall_mtrl_alpha"
        />

</menu>