<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <RadioButton
        android:id="@+id/defaultServerRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_server"
        android:layout_marginBottom="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <RadioButton
        android:id="@+id/customServerRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_server"
        />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_custom_auth_server"
            android:textColor="@color/accent"
            android:layout_marginLeft="16dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/customURLEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:textColorHint="@color/color_grey_400"
        android:enabled="true"
        />
</androidx.appcompat.widget.LinearLayoutCompat>